--- a/book-service/package.json
+++ b/book-service/package.json
@@ -19,6 +19,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^2.0.0",
+    "@types/papaparse": "^5.5.1",
     "@types/pg": "^8.10.9",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.31",
@@ -32,9 +34,12 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
+    "papaparse": "^5.5.3",
     "pg": "^8.11.0",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
+    "xlsx": "^0.18.5",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
