--- a/user-service/package.json
+++ b/user-service/package.json
@@ -44,7 +44,8 @@
     "pg": "^8.11.0",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
